# gtk-session-lock

./: .gitignore  CHANGELOG.md  README.md  compatibility.md  flake.nix  gtk-session-lock.nix  meson.build  release_process.md
.github/workflows/: deploy_docs.yml
examples/: meson.build  simple-example.c  simple-example.py
gtk-priv/: README.md
gtk-priv/h/: common.h  gdk_wayland_pointer_data_priv.h  gdk_wayland_pointer_frame_data_priv.h  gdk_wayland_seat_priv.h  gdk_wayland_tablet_data_priv.h  gdk_wayland_touch_data_priv.h  gdk_window_impl_class_priv.h  gdk_window_impl_priv.h  gdk_window_impl_wayland_class_priv.h  gdk_window_impl_wayland_priv.h  gdk_window_priv.h
gtk-priv/scripts/: code.py
include/: gtk-session-lock.h  meson.build
protocol/: meson.build
src/: api.c  custom-shell-surface.c  custom-shell-surface.h  gtk-priv-access.c  gtk-priv-access.h  gtk-wayland.c  gtk-wayland.h  lock-surface.c  lock-surface.h  meson.build  session-lock.c
test/: meson.build
test/integration-test-common/: integration-test-common.c  integration-test-common.h
test/integration-tests/: meson.build
test/unit-tests/: meson.build  test-get-version.c
